kubernetes-manifests/sandbox/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  type: ClusterIP
  selector:
    app: excalidraw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
