kubernetes-manifests/sandbox/excalidraw/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: excalidraw.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: excalidraw
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`excalidraw.dtlp.cc`)
      services:
        - name: excalidraw
          kind: Service
          port: 80
  tls: {}
